# emulsion

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  build.rs  cfg.toml  rustfmt.toml
.github/workflows/: release-packages.yml  test.yml
distribution/macos/: IMPORTANT.txt  create_dmg.sh
distribution/windows/: .gitignore  FileAssociation.nsh  LICENSE.txt  Readme.txt  emulsion.nsi  make-test-installer.bat  update_files.bat
distribution/windows/prerequisites/: README.txt
nix-example/: .gitignore  default.nix
nix-example/emulsion/: default.nix
resource_dev/: icon.ai
resource_dev/Usage Panel/: HOW TO EDIT.txt
src/: clipboard_handler.rs  cmd_line.rs  configuration.rs  handle_panic.rs  input_handling.rs  main.rs  parallel_action.rs  playback_manager.rs  shaders.rs  utils.rs  version.rs
src/image_cache/: directory.rs  image_loader.rs  mod.rs  pending_requests.rs
src/shaders/: fragment_110.glsl  fragment_140.glsl
src/widgets/: bottom_bar.rs  copy_notification.rs  help_screen.rs  mod.rs  picture_widget.rs
subcrates/gelatin/: Cargo.toml  LICENSE.txt  README.md
subcrates/gelatin/examples/: hello.rs
subcrates/gelatin/src/: application.rs  button.rs  label.rs  lib.rs  line_layout_container.rs  misc.rs  picture.rs  shaders.rs  slider.rs  window.rs
subcrates/gelatin/src/shaders/: color_f_110.glsl  color_f_140.glsl  color_shadow_f_110.glsl  color_shadow_f_140.glsl  texture_shadow_f_110.glsl  texture_shadow_f_140.glsl  vertex_110.glsl  vertex_140.glsl
