[package]
name = "emulsion"
version = "9.1.0"
description = "A fast and minimalistic image viewer"
repository = "https://github.com/ChristophHess/emulsion"
authors = ["Christoph Hess <admin@ctrl-consulting.com>"]
license = "MIT"
readme = "README.md"
edition = "2018"
build = "build.rs"

[package.metadata.bundle]
name = "Emulsion"
identifier = "io.github.christophhess.emulsion"
icon = ["resource_dev/emulsion.png"]
resources = ["LICENSE.txt"]
short_description = "A lightweight and minimalistic image viewer"
copyright = "Copyright (c) 2020 The Emulsion Contributors"
linux_exec_args = "%f"
linux_mime_types = [
    "image/jpeg",
	"image/jpg",
	"image/pjpeg",
	"image/png",
	"image/apng",
	"image/gif",
	"image/webp",
	"image/tiff",
	"image/bmp",
	"image/avif",
	"image/svg+xml",
	"image/svg",
	"image/x-png",
	"image/x-tga",
	"image/x-targa",
	"image/x-bmp",
	"image/x-icon",
	"image/vnd.microsoft.icon",
	"image/vnd.radiance",
	"image/x-portable-bitmap",
	"image/x-portable-graymap",
	"image/x-portable-pixmap",
	"image/x-portable-anymap"
]

[workspace]
members = [
    "subcrates/gelatin",
]

[profile.dev.package."*"]
opt-level = 1
[profile.dev.build-override]
opt-level = 1
[profile.release]
lto = "thin"

[features]
default = []
networking = ["ureq"]
avif = ["libavif-image"]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[dependencies]
gelatin = { path = "./subcrates/gelatin", version = "0.7" }
ureq = { version = "2.4.0", features = ["json"], optional = true }
lazy_static = "1.4.0"
directories-next = "2.0.0"
open = "3.0.1"
sys-info = "0.9.1"
error-chain = "0.12.4"
backtrace = "0.3.65"
serde = { version = "1.0.137", features = ["derive"] }
toml = "0.5.9"
rand = "0.8.5"
lexical-sort = "0.3.1"
trash = "2.1.4"
clap = { version = "3.2.7", default-features = false, features = ["std"] }
kamadak-exif = "0.5.4"
arboard = { version = "2.1.1", features = ["wayland-data-control"] }
resvg = "0.23.0"
usvg = "0.23.0"
tiny-skia = "0.6.6"
log = "0.4.17"
env_logger = "0.9.0"

[dependencies.libavif-image]
version = "0.9.0"
default-features = false
features = ["codec-dav1d"]
optional = true
