[package]
name = "gelatin"
version = "0.7.0"
description = "A basic UI framework"
repository = "https://github.com/ArturKovacs/emulsion"
authors = ["Artur Barnabas <kovacs.artur.barnabas@gmail.com>"]
license = "MIT"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
derive_builder = "0.11.2"
image = "0.24.2"
glium = "0.31.0"
winit = "0.26.1"

[features]
wayland = []
